# dynamic-sssp-update

./: PDC Project Report.docx  README.md
PDC_SSSP/: main.cpp
PDC_SSSP - OpenMP/: CMakeLists.txt  main.cpp
PDC_SSSP - OpenMP/include/: Change.hpp
PDC_SSSP - OpenMP/src/: GraphCSR.cpp  SsspUpdater.cpp
PDC_SSSP - Serial/: CMakeLists.txt  main.cpp
PDC_SSSP - Serial/include/: EdgeList.hpp  GraphCSR.hpp
PDC_SSSP/include/: SsspUpdater.hpp
PDC_SSSP/src/: SsspUpdater.cpp
